[tool.poetry]
name = "massa-deploy"
version = "0.1.0"
description = ""
authors = ["Yvan Sraka <yvan@sraka.xyz>"]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
fabric = "^2.6.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
